--- a/src/app/shopping-list/shopping-edit/shopping-edit.component.html
+++ b/src/app/shopping-list/shopping-edit/shopping-edit.component.html
@@ -1,6 +1,6 @@
 <div class="row">
     <div class="col-xs-12">
-        <form>
+        <form (ngSubmit)="onAddItem(f)" #f="ngForm">
             <div class="row">
                 <div class="col-sm-5 form-group">
                     <label for="name">Name</label>
@@ -8,7 +8,7 @@
                         type="text" 
                         id="name" 
                         class="form-control"
-                        #nameInput>
+                        ngModel name="name">
                 </div>
                 <div class="col-sm-2 form-group">
                     <label for="amount">Amount</label>
@@ -16,7 +16,7 @@
                         type="text" 
                         id="amount" 
                         class="form-control"
-                        #amountInput>
+                        ngModel name="amount">
                 </div>
             </div>
             <div class="row">
