--- a/src/app/recipes/recipe-edit/recipe-edit.component.html
+++ b/src/app/recipes/recipe-edit/recipe-edit.component.html
@@ -42,7 +42,7 @@
             <div class="row">
                 <div class="col-xs-12" 
                     formArrayName="ingredients">
-                    <div class="row"
+                    <div class="row" style="margin: 10px 0 0 0;"
                         *ngFor="let ingredientCtrl of controls; let i = index" [formGroupName]="i"
                         >
                         <div class="col-xs-8">
@@ -55,6 +55,12 @@
                         </div>
                         <div class="col-xs-2">
                             <button class="btn btn-danger">X</button>
+                        </div>
+                    </div>
+                    <hr/>
+                    <div class="row">
+                        <div class="col-xs-12">
+                            <button class="btn btn-success" (click)="onAddIngredient()">Add Ingredient</button>
                         </div>
                     </div>
                 </div>
