--- a/src/app/recipes/recipe-edit/recipe-edit.component.html
+++ b/src/app/recipes/recipe-edit/recipe-edit.component.html
@@ -55,7 +55,11 @@
                             formControlName="amount">
                         </div>
                         <div class="col-xs-2">
-                            <button class="btn btn-danger">X</button>
+                            <button 
+                                class="btn btn-danger"
+                                type="button"
+                                (click)="onDeleteIngredient(i)">
+                                X</button>
                         </div>
                     </div>
                     <hr/>
