--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -6,9 +6,10 @@
             </button>
             <a routerLink="/" class="navbar-brand">Recipe Book</a>
           </div>
-        <div class="navbar-collapse" [class.collapse]="collapsed" (window:resize)="collapsed = true">
+        <div class="collapse navbar-collapse">
             <ul class="nav navbar-nav">
                 <li routerLinkActive="active"><a routerLink="/recipes">Recipe</a></li>
+                <li routerLinkActive="active"><a routerLink="/auth">Authenticate</a></li>
                 <li routerLinkActive="active"><a routerLink="/shopping-list">Shopping List</a></li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
